chore: migrate server-side data loading

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -346,14 +346,40 @@ export const getStaticPaths = async () => {
 
 ### Nuxt Data Fetching to Astro
 
-{/* TODO: Update this */}
+Nuxt has two methods of fetching server-side data:
 
-Nuxt has two methods of generating data:
+- [`asyncData` options API](https://nuxtjs.org/docs/features/data-fetching/#async-data)
+- [`fetch` hook](https://nuxtjs.org/docs/features/data-fetching/#the-fetch-hook)
 
-- [`asyncData` options API](https://nuxtjs.org/docs/features/data-fetching/#async-data) akin to `getStaticProps`
-- [`fetch` hook](https://nuxtjs.org/docs/features/data-fetching/#the-fetch-hook) which loads data either on client or server (no 1:1 match)
+Astro simplifies this to simply fetch data inside of your page's code fence.
 
-See more about [local files imports with `Astro.glob()`](/en/guides/imports/#astroglob).
+Migrate the following:
+
+```vue title="pages/index.vue"
+{
+  // ...
+  async asyncData() {
+    const res = await fetch("https://pokeapi.co/api/v2/pokemon?limit=151")
+    const resJson = await res.json();
+    const pokemons = resJson.results;
+    return {
+      pokemons,
+    }
+  },
+}
+```
+
+To a code fence without a wrapper function:
+
+```astro title="src/pages/index.astro"
+---
+const res = await fetch("https://pokeapi.co/api/v2/pokemon?limit=151")
+const resJson = await res.json();
+const pokemons = resJson.results;
+---
+
+<!-- Your template here -->
+```
 
 ### Nuxt Styling to Astro
 
