chore: add styling section for Nuxt

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -383,14 +383,74 @@ const pokemons = resJson.results;
 
 ### Nuxt Styling to Astro
 
-{/* TODO: Update this */}
+Nuxt utilizes Vue's component styling to generate a page's style.
 
-`<style>` is default `scoped` in Astro
+```vue title="pages/index.vue"
+<template>
+	<!-- Your template here -->
+</template>
 
-Nuxt2 has SASS support:
+<script>
+	// Your server logic here
+</script>
 
-- https://nuxtjs.org/docs/configuration-glossary/configuration-css/
-- Seems like others supported via Webpack
+<style scoped>
+    .class {
+        color: red;
+    }
+</style>
+```
+
+ Similarly, in Astro you can drop in a `<style>` element in your page's template to style the component:
+
+```astro title="src/pages/index.vue"
+---
+// Your server logic here
+---
+
+<style>
+    .class {
+        color: red;
+    }
+</style>
+```
+
+#### Global Styling
+
+`<style>`  tags are `scoped` by default in Astro. To make a `<style>` tag global, mark it with the `is:global` attribute:
+
+```astro title="src/pages/index.vue"
+<style is:global> 
+	p {
+		color: red;
+	}
+</style>
+```
+
+
+
+#### Pre-processor support
+
+[Astro supports the most popular CSS preprocessors right out of the box](/en/guides/styling/#css-preprocessors) by installing them as a dev dependency. For example, to use SCSS you'd run:
+
+```shell
+npm install -D sass
+```
+
+After doing so, you're then able to use `.scss` or `.sass` styled without modification from your Vue components.
+
+```astro title="src/layouts/Layout.astro"
+<p>Hello, world</p>
+<style lang="scss">
+p {
+   color: black;
+   
+   &:hover {
+       color: red;
+   }
+}
+</style>
+```
 
 See more about [Styling in Astro](/en/guides/styling/).
 
