--- a/src/pages/en/tutorial/2-pages/5.mdx
+++ b/src/pages/en/tutorial/2-pages/5.mdx
@@ -116,7 +116,7 @@ Your About page is now styled using *both* the imported `global.css` file *and* 
 - Are there any conflicting styles, and if so, which are applied?
 
     <p>
-      <Spoiler>Yes, h1 has a size of 2.5rem globally, but 4rem locally in the `<style>` tag. The local 4rem rule is applied on the About page.</Spoiler>
+      <Spoiler>Yes, `<h1>`  has a size of `2.5rem` globally, but `4rem` locally in the `<style>` tag. The local `4rem` rule is applied on the About page.</Spoiler>
     </p>
 
 - Describe how `global.css` and `<style>` work together.
@@ -128,7 +128,7 @@ Your About page is now styled using *both* the imported `global.css` file *and* 
 - How would you choose whether to declare a style in a `global.css` file or a `<style>` tag?
 
     <p>
-      <Spoiler>If you want a style to be applied site-wide, you would choose to use a global.css file. However, if you want styles to apply to only the HTML content in a single Astro file, and not affect other elements on your site, you would choose a `<style>` tag.</Spoiler>
+      <Spoiler>If you want a style to be applied site-wide, you would choose to use a `global.css` file. However, if you want styles to apply to only the HTML content in a single `.astro` file, and not affect other elements on your site, you would choose a `<style>` tag.</Spoiler>
     </p>
 
 </Box>
