update link to correct resource

--- a/src/pages/en/guides/styling.mdx
+++ b/src/pages/en/guides/styling.mdx
@@ -502,7 +502,7 @@ import rawStylesCSS from '../styles/main.css?raw';
 <style is:inline set:html={rawStylesCSS}></style>
 ```
 
-See [Vite's docs](https://vitejs.dev/guide/assets.html#importing-asset-as-url) for full details.
+See [Vite's docs](https://vitejs.dev/guide/assets.html#importing-asset-as-string) for full details.
 ### `?url` CSS Imports
 
 For advanced use cases, you can import a direct URL reference for a CSS file inside of your project `src/` directory. This can be useful when you need complete control over how a CSS file is loaded on the page. However, this will prevent the optimization of that CSS file with the rest of your page CSS .
