--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -337,9 +337,16 @@ const { to } = Astro.props
 
 ### Next Imports to Astro
 
-If necesssary, update any file imports to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full (e.g. `../../layouts/Layout.astro`). 
+If necessary, update any file imports to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full. 
 
 Note that `.astro` and several other file types must be imported with their full file extension.
+
+```astro title="src/pages/authors/Fred.astro"
+---
+import Card from `../../components/Card.astro`
+---
+<Card />
+```
 
 ### Next Children Props to Astro
 
@@ -363,27 +370,66 @@ See more about [specific `<slot />` usage in Astro](/en/core-concepts/astro-comp
 
 ### Next Data Fetching to Astro
 
-Convert any instances of `getStaticProps()` to `Astro.glob()` to access data from other files in your project source. To fetch external data, use `fetch()`. These data requests are made in the frontmatter of the Astro component using the data, and use top-level await.
+Convert any instances of `getStaticProps()` to `Astro.glob()` or `getCollections()` to access data from other files in your project source. To fetch external data, use `fetch()`.
 
-See more about [local files imports with `Astro.glob()`](/en/guides/imports/#astroglob).
+These data requests are made in the frontmatter of the Astro component using the data, and use top-level await.
+
+```astro title="src/pages/index.astro"
+---
+import { getCollection } from 'astro:content';
+
+// Get all `src/content/blog/` entries
+const allBlogPosts = await getCollection('blog');
+
+// Get all `src/pages/posts/` entries
+const allPosts = await Astro.glob('../pages/posts/*.md');
+
+const response = await fetch('https://randomuser.me/api/');
+const data = await response.json();
+const randomUser = data.results[0];
+---
+```
+
+See more about [local files imports with `Astro.glob()`](/en/guides/imports/#astroglob) or [fetching remote data](/en/guides/data-fetching/).
 
 ### Next Styling to Astro
 
-Convert any inline style objects (`style = {{fontWeight: "bold", }}`) to inline HTML style attributes (`style="font-weight:bold;"`). Or, use an Astro `<style>` tag for scoped CSS styles. Import `.css` files directly into a main layout component to achieve global styles.
+Convert any inline style objects (`style = {{fontWeight: "bold", }}`) to inline HTML style attributes (`style="font-weight:bold;"`). Or, use an Astro `<style>` tag for scoped CSS styles.
+
+```jsx title="src/components/Card.jsx"
+<div style={{backgroundColor: `#f4f4f4`, padding: `1em`}}>{message}</div>
+```
+
+
+```astro title="src/components/Card.astro"
+<div style="background-color: #f4f4f4; padding: 1em;">{message}</div>
+```
 
 You may also need to replace any CSS-in-JS libraries (e.g. styled components) with other available CSS options in Astro.
 
-{/* TODO: CSS in JS?? replacements for styled components */}
+Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your code required!
 
 See more about [Styling in Astro](/en/guides/styling/).
 
 ### Next Image Plugin to Astro
 
-Convert any Next `<Image />` components with [Astro's own image integration components](/en/guides/images/#astros-image-integration), or with a standard HTML `<img>` tag.
+Convert any Next `<Image />` components with [Astro's own image integration components](/en/guides/images/#astros-image-integration), or with a standard HTML `<img>`. See a [full list of component attributes](/en/guides/integrations-guide/image/#usage) available for Astro's `<Image />` and `<Picture />` components, and note that several will differ from Next's attributes. 
+
+```astro title="src/pages/index.astro"
+---
+import { Image } from '@astrojs/image/components';
+import localImage from "../images/brand/logo.png";
+import rocket from '../images/rocket.svg';
+---
+<Image src={localImage} alt="The Astro Logo" />
+<img src={rocket} alt="A rocketship in space.">
+```
+
+In React (`.jsx`) components, use standard JSX image syntax (`<img />`). Astro will not optimize these images, but you can install and use NPM packages for more flexibility.
 
 You can learn more about [using images in Astro](/en/guides/images/) in the Images Guide.
 
-{/*  TODO: Add mention of https://nextjs.org/docs/api-reference/next/head limitation */}
+
 
 ## Guided examples: See the steps!
 
