i18n(pt-BR): Update `astro-components.mdx`, `astro-pages.mdx` and a few more translations!

--- a/src/pages/pt-br/concepts/why-astro.mdx
+++ b/src/pages/pt-br/concepts/why-astro.mdx
@@ -28,7 +28,7 @@ Em contraste, a maioria dos frameworks web modernos foram feitos para construir 
 Esta é uma das mais importantes diferenças para se entender sobre o Astro. O foco em conteúdo do Astro o permite fazer tradeoffs e entregar funcionalidades com performance sem igual que não fariam sentido para frameworks focados em aplicações implementarem.
 
 :::tip
-Se o seu projeto cai no segundo campo de "aplicações", Astro pode não ser a escolha certa para seu projeto... **e tá tudo certo!** Veja o [Next.js](https://nextjs.org/) como alternativa para um ótimo framework web focado em aplicações.
+Se o seu projeto cai no segundo campo de "aplicações", Astro pode não ser a escolha certa para seu projeto... **e tá tudo certo!** Veja o [Next.js](https://nextjs.org/) como uma alternativa mais focada em aplicações do que o Astro.
 :::
 
 ## Servidor em primeiro lugar
