--- a/src/pages/pt-br/core-concepts/project-structure.mdx
+++ b/src/pages/pt-br/core-concepts/project-structure.mdx
@@ -4,6 +4,7 @@ title: Estrutura de Projetos
 description: Aprenda a estruturar um projeto com Astro.
 i18nReady: true
 ---
+import FileTree from '~/components/FileTree.astro';
 
 Seu novo projeto Astro gerado a partir do assistente de linha de comando `create-astro` já vem com alguns arquivos e diretórios. Outros, você irá criar por si mesmo e adicionar a estrutura de arquivos já existentes do Astro.
 
@@ -21,31 +22,31 @@ Astro inclui uma estrutura de diretórios padronizados para o seu projeto. A rai
 
 ### Exemplo de Árvore do Projeto
 
-Os diretórios de um projeto comum devem se aparecer com isto:
+Os diretórios de um projeto Astro comum devem se aparecer com isto:
 
-```
-├── src/
-│   ├── components/
-│   │   ├── Cabecalho.astro
-│   │   └-─ Botao.jsx
-│   ├── layouts/
-│   │   └-─ LayoutPostagem.astro
-│   └── pages/
-│   │   ├── postagens/
-│   │   │   ├── postagem1.md
-│   │   │   ├── postagem2.md
-│   │   │   └── postagem3.md
-│   │   └── index.astro
-│   └── styles/
-│       └-─ global.css
-├── public/
-│   ├── robots.txt
-│   ├── favicon.svg
-│   └-─ imagem-redes-sociais.png
-├── astro.config.mjs
-├── package.json
-└── tsconfig.json
-```
+<FileTree>
+- public/
+  - robots.txt
+  - favicon.svg
+  - image-social.png
+- src/
+  - components/
+    - Cabecalho.astro
+    - Botao.jsx
+  - layouts/
+    - LayoutPostagem.astro
+  - pages/
+    - postagens/
+      - postagem1.md
+      - postagem2.md
+      - postagem3.md
+    - index.astro
+  - styles/
+    - global.css
+- astro.config.mjs
+- package.json
+- tsconfig.json
+</FileTree>
 
 ### `src/`
 
