--- a/src/pages/pt-br/editor-setup.mdx
+++ b/src/pages/pt-br/editor-setup.mdx
@@ -35,9 +35,9 @@ Nossa espetacular comunidade mantém várias extensões para outros editores pop
 
 ## IDEs da JetBrains
 
-Nós adoraríamos dar suporte à [IDE WebStorm](https://www.jetbrains.com/webstorm/). Infelizmente, ela não suporta servidores de linguagem e nós não temos a capacidade de escrever e manter uma extensão completamente separada em uma linguagem diferente da nossa base de código.Visite a [issue relevante do suporte da JetBrains](https://youtrack.jetbrains.com/issue/WEB-52015/Astro-Language-Support), para dar upvote no ticket, verificar o progresso e encontrar soluções alternativas da comunidade.
+A JetBrains anunciou o futuro suporte para Astro em sua [IDE Webstorm](https://www.jetbrains.com/webstorm/). A [Roadmap](https://blog.jetbrains.com/webstorm/2022/12/webstorm-2023-1-roadmap/) mostra que Astro será suportado no lançamento 2023.1, que está marcado para o fim de Março de 2023.
 
-A futura [IDE Fleet](https://www.jetbrains.com/fleet/) da JetBrains _irá_ suportar servidores de linguagem e nossas ferramentas atualmente disponíveis serão capazes de ser executadas nele sem nenhum problema.
+A futura [IDE Fleet](https://www.jetbrains.com/fleet/) da JetBrains também suporta servidores de linguagem e portanto, nossas ferramentas atualmente disponíveis serão capazes de ser executadas nele sem nenhum problema.
 
 ## Editores no Navegador
 
