--- a/src/pages/pt-br/getting-started.mdx
+++ b/src/pages/pt-br/getting-started.mdx
@@ -30,7 +30,7 @@ Veja o nosso guia detalhado [Por que Astro?](/pt-br/concepts/why-astro/) para ap
 Visite [astro.new](https://astro.new/) e escolha entre uma variedade de templates para começar. Se divirta com uma versão completa e funcional do Astro direto do seu navegador!
 
 <div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
-    <Button href="https://astro.new/basics?on=stackblitz">Início rápido!</Button>
+    <Button href="https://astro.new/basics?on=stackblitz">Iniciar template básico</Button>
     <Button variant="outline" href="https://astro.new/">Veja todos os templates →</Button>
 </div>
 
@@ -98,7 +98,7 @@ Junte-se a nós no [Discord do Astro](https://astro.build/chat) para compartilha
 💬 Compartilhe o que você tem feito no canal `#showcase`!
 
 
-## Aprenda Mais
+## O que há de novo?
 
 [Blog do Astro](https://astro.build/blog/)
 
