--- a/src/pages/pt-br/guides/data-fetching.mdx
+++ b/src/pages/pt-br/guides/data-fetching.mdx
@@ -189,7 +189,7 @@ const query = `
     }
   }
 `
-const { data } = await apiClient.catalogueApi(query)
+const { data: { catalogue } } = await apiClient.catalogueApi(query)
 ---
 <LayoutBase>
   <h1>{catalogue.name}</h1>
