--- a/src/pages/pt-br/reference/publish-to-npm.mdx
+++ b/src/pages/pt-br/reference/publish-to-npm.mdx
@@ -42,16 +42,17 @@ Antes de se aprofundar, será útil ter um entendimento básico de:
 Para criar um pacote nós fortemente recomendados configurar seu ambiente de desenvolvimento para utilizar **workspaces** em um projeto. Isso irá permitir que você desenvolva o seu componente ao lado de uma cópia funcional do Astro.
 
 ```
-diretorio-do-meu-novo-componente/
-├─ demo/
-| └─ ... para testes e demonstração
-├─ package.json
-└─ packages/
-  └─ meu-componente/
-      ├─ index.js
-      ├─ package.json
-      └─ ... arquivos adicionais usados pelo pacote
-```
+<FileTree>
+- diretorio-do-meu-novo-componente/
+  - demo/
+    - ... para testes e demonstração
+  - package.json
+  - packages/
+    - meu-componente/
+      - index.js
+      - package.json
+      - ... arquivos adicionais utilizados pelo pacote
+</FileTree>
 
 Nesse exemplo, chamado de `meu-projeto`, nós criamos um projeto com um único pacote, chamado de `meu-componente` e um diretório `demo` para testes e demonstração do componente.
 
@@ -238,12 +239,12 @@ Enquanto isso, nossas recomendações atuais para testes é:
 3. Cada página deve ter algum uso diferente do componente que você gostaria de testar.
 4. Execute `astro build` para construir suas fixtures, então compare o resultado final do diretório `dist/__fixtures__/` com o resultado esperado.
 
-```bash
-meu-projeto/demo/src/pages/__fixtures__/
-  ├─ nome-teste-01.astro
-  ├─ nome-teste-02.astro
-  └─ nome-teste-03.astro
-```
+<FileTree>
+- meu-projeto/demo/src/pages/\_\_fixtures\_\_/
+  - nome-teste-01.astro
+  - nome-teste-02.astro
+  - nome-teste-03.astro
+</FileTree>
 
 ## Publicando seu componente
 
