--- a/src/pages/pt-br/core-concepts/astro-pages.mdx
+++ b/src/pages/pt-br/core-concepts/astro-pages.mdx
@@ -5,23 +5,34 @@ description: Uma introdução à páginas Astro
 i18nReady: true
 ---
 
-**Páginas** são um tipo especial de [componente Astro](/pt-br/core-concepts/astro-components/) que vive no sub-diretório  `src/pages/`. Elas são responsáveis por gerenciar o roteamento, carregamento de dados, e o layout de cada página HTML no seu website.
+Páginas são arquivos que vivem dentro do subdiretório `src/pages/` do seu projeto Astro. Elas são responsáveis por lidar com roteamento, carregamento de dados e com o layout geral de cada página do seu website.
 
-### Roteamento baseado em arquivos
+## Tipos de arquivos suportados
 
-Astro se beneficia de uma estratégia de roteamento chamada **roteamento baseado em arquivos**. Cada arquivo `.astro` em seu diretório `src/pages` se torna uma página ou endpoint no seu site com base no seu caminho de arquivo.
+Astro suporta os seguintes tipos de arquivo no diretório `src/pages/`:
+- [`.astro`](#páginas-astro)
+- [`.md`](#páginas-markdownmdx)
+- `.mdx` (com a [Integração MDX instalada](/pt-br/guides/integrations-guide/mdx/#installation))
+- [`.html`](#páginas-html)
+- [`.js`/`.ts`] (como [endpoints](/pt-br/core-concepts/endpoints/))
 
-Escreva [elementos `<a>`](https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/a) padrões do HTML no template do seu componente para navegar entre páginas.
+## Roteamento baseado em arquivos
+
+Astro se beneficia de uma estratégia de roteamento chamada **roteamento baseado em arquivos**. Cada arquivo em seu diretório `src/pages` se torna um endpoint no seu site com base no seu caminho de arquivo.
 
 📚 Leia mais sobre [Roteamento no Astro](/pt-br/core-concepts/routing/).
 
-### HTML da Página
+### Link entre páginas
 
-Páginas Astro devem retornar uma completa página `<html>...</html>`, incluindo `<head>` e `<body>`. (`<!doctype html>` é opcional e será adicionado automaticamente.)
+Escreva [elementos `<a>`](https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/a) padrões do HTML em suas páginas Astro para fazer o link para outras páginas em seu site.
+
+## Páginas Astro
+
+Páginas Astro usam a extensão de arquivo `.astro` e suportam as mesmas funcionalidades que [componentes Astro](/pt-br/core-concepts/astro-components/).
 
 ```astro
 ---
-// Exemplo: src/pages/index.astro
+// Example: src/pages/index.astro
 ---
 <html lang="pt-BR">
   <head>
@@ -33,112 +44,43 @@ Páginas Astro devem retornar uma completa página `<html>...</html>`, incluindo
 </html>
 ```
 
-### Aproveitando Layouts de Páginas
-
-Para evitar repetir os mesmos elementos HTML em cada página, você pode mover elementos comuns como `<head>` e `<body>` em seus próprios [componentes de layout](/pt-br/core-concepts/layouts/). Você pode utilizar muitos ou poucos componentes de layout, esta é uma decisão que fica ao seu gosto.
+Para evitar repetir os mesmos elementos HTML em cada página, você pode mover elementos `<head>` e `<body>` comuns em seus próprios [componentes de layout](/pt-br/core-concepts/layouts/). Você pode usar quantos componentes de layout você quiser.
 
 ```astro {3} /</?LayoutDoMeuSite>/
 ---
-// Exemplo: src/pages/index.astro
+// Example: src/pages/index.astro
 import LayoutDoMeuSite from '../layouts/LayoutDoMeuSite.astro';
 ---
 <LayoutDoMeuSite>
-  <p>Conteúdo da minha página, envolto em um layout!</p>
+  <p>O conteúdo da minha página, envolto em um layout!</p>
 </LayoutDoMeuSite>
 ```
 
 📚 Leia mais sobre [componentes de layout](/pt-br/core-concepts/layouts/) no Astro.
 
-#### Modificando `<head>`
+## Páginas Markdown/MDX
 
-Note que utilizar uma tag `<head>` funciona como qualquer outra tag HTML: ela não é movida para o topo da página. Nós recomendados escrever `<head>` e seus conteúdos em seu layout superior.
+Astro também trata quaisquer arquivos Markdown (`.md`) dentro de `src/pages/` como páginas no seu website final. Se você tiver a [Integração MDX instalada](/pt-br/guides/integrations-guide/mdx/#installation), ele também irá tratar arquivos MDX (`.mdx`) da mesma forma. Eles são comumente utilizados para páginas cheias de texto como postagens de um blog e documentação.
 
-## Páginas Markdown
-
-Astro também considera qualquer arquivo Markdown (`.md`) dentro de `/src/pages/` como páginas no seu website final. Estes são comumente usados em páginas cheias de texto, como em postagens de blog ou documentações.
-
-Layouts de páginas são especialmente úteis em [arquivos Markdown](#páginas-markdown). Arquivos markdown podem utilizar a propriedade especial do front matter `layout` para especificar um [componente de layout](/pt-br/core-concepts/layouts/) que irá envolver o conteúdo do Markdown em uma página `<html>...</html>` completa.
+Layouts de página são especialmente úteis para [arquivos Markdown](#páginas-markdownmdx). Arquivos MMarkdown podem utilizar a propriedade especial `layout` do frontmatter para especificar um [componente de layout](/pt-br/core-concepts/layouts/) que irá envolver seu conteúdo Markdown em uma página de documento `<html>...</html>` completo.
 
 ```md {3}
 ---
-# Example: src/pages/pagina.md
+# Example: src/pages/página.md
 layout: '../layouts/LayoutDoMeuSite.astro'
 title: 'Minha página Markdown'
 ---
 # Título
 
-Esta é minha página, escrita em **Markdown.**
+Está é minha página, escrita em **Markdown.**
 ```
 
 📚 Leia mais sobre [Markdown](/pt-br/guides/markdown-content/) no Astro.
 
+## Páginas HTML
 
-## Páginas Não-HTML
+Arquivos com a extensão de arquivo `.html` podem ser colocados dentro de `src/pages/` e usados diretamente como páginas no seu site. Note que algumas funcionalidades importantes do Astro não são suportadas em [Componentes HTML](/pt-br/core-concepts/astro-components/#componentes-html).
 
-Páginas Não-HTML, como `.json` ou `.xml`, ou até assets como imagens, podem ser construídas utilizando rotas de API comumente conhecidas como **Rotas de Arquivo**.
-
-**Rotas de Arquivo** são arquivos de script que terminam com a extensão `.js` ou `.ts` e estão localizadas no diretório `src/pages`.
-
-Nomes de arquivos embutidos e extensões são baseadas no nome do arquivo fonte, exemplo: `src/pages/data.json.ts` será construído de forma a se igualar a rota `/data.json` na sua build final.
-
-Utilizando SSR (renderização no lado do servidor) a extensão não importa e pode ser omitida. Isto porque nenhum arquivo é gerado em tempo de build. No lugar, Astro gera um único arquivo de servidor.
-
-```js
-// Exemplo: src/pages/feitoCom.json.ts
-// Saída: /feitoCom.json
-
-// Rotas de arquivos exportam uma função get(), na qual é chamada para gerar o arquivo.
-// Retorna um objeto com `body` para salvar os conteúdos do arquivo na sua build final.
-export async function get() {
-  return {
-    body: JSON.stringify({
-      name: 'Astro',
-      url: 'https://astro.build/',
-    }),
-  };
-}
-```
-
-Rotas de API recebem um objeto `APIContext` que contém [params](/pt-br/reference/api-reference/#params) e um [Request](https://developer.mozilla.org/pt-BR/docs/Web/API/Request):
-
-```ts title="src/pages/caminho-request.json.ts"
-import type { APIContext } from 'astro';
-
-export async function get({ params, request }: APIContext) {
-  return {
-    body: JSON.stringify({
-      path: new URL(request.url).pathname
-    })
-  };
-}
-```
-
-Você também pode escrever as funções das suas rotas de API utilizando o tipo `APIRoute`. Isso resultará em melhores mensagens de erro quando a sua rota de API retornar o tipo errado:
-
-```ts title="src/pages/caminho-request.json.ts"
-import type { APIRoute } from 'astro';
-
-export const get: APIRoute = ({ params, request }) => {
-  return {
-    body: JSON.stringify({
-      path: new URL(request.url).pathname
-    })
-  };
-};
-```
-
-Você pode opcionalmente retornar a opção `encoding` em builds estáticas. Ela pode ser qualquer [`BufferEncoding`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/bdd02508ddb5eebcf701fdb8ffd6e84eabf47885/types/node/buffer.d.ts#L169) válido aceito pelo método `fs.writeFile` do Node.js. Por exemplo, para produzir uma imagem png binária usando SSG:
-
-```ts title="src/pages/imagem.png.ts" {7}
-import type { APIRoute } from 'astro';
-export const get: APIRoute = ({ params, request }) => {
-  const buffer = ...;
-  return {
-    body: buffer.toString('binary'),
-    encoding: 'binary',
-  };
-};
-```
 
 ## Página Customizada de Erro 404
 
