--- a/src/pages/pt-br/guides/deploy/buddy.mdx
+++ b/src/pages/pt-br/guides/deploy/buddy.mdx
@@ -13,7 +13,7 @@ O Buddy não irá hospedar o seu site. Em vez disso, ele o ajuda a gerenciar o p
 
 ## Como fazer o Deploy
 
-1. Crie uma conta no **Buddy** [aqui](https://buddy.works/sign-up).
+1. [Crie uma conta no **Buddy**](https://buddy.works/sign-up).
 2. Crie um novo projeto e conecte-o com um repositório git (GitHub, GitLab, BitBucket, qualquer repositório Git privado ou você pode usar o Buddy Git Hosting).
 3. Adicione um novo pipeline.
 4. Nesse novo pipeline adicione um **[Node.js](https://buddy.works/actions/node-js)** action.
@@ -24,5 +24,5 @@ O Buddy não irá hospedar o seu site. Em vez disso, ele o ajuda a gerenciar o p
    npm run build
    ```
 
-6. Adicione um deployment action — há muitos para escolher, você pode navegar por eles [aqui](https://buddy.works/actions). Embora suas configurações possam ser diferentes, lembre-se de definir o **Source path** para `dist`.
+6. Adicione um deployment action — há muitos para escolher, você pode navegar por eles no [catálogo de actions do Buddy](https://buddy.works/actions). Embora suas configurações possam ser diferentes, lembre-se de definir o **Source path** para `dist`.
 7. Clique no botão **Run**.
