--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -126,7 +126,7 @@ Here are some tips for converting a Gatsby `.js` component into a `.astro` compo
 
 4. Remove any GraphQL queries. Instead, use import and `Astro.glob()` statements to query your local files. Update any [dynamic HTML content variables](/en/core-concepts/astro-components/#dynamic-html) to use Astro-specific properties instead.
 
-See [examples from Gatsby's Blog starter template converted step-by-step](#guided-examples-see-the-steps).
+See [an example from Gatsby's Blog starter template converted step-by-step](#guided-example-gatsby-layout-to-astro)
 
 #### Compare: `.jsx` vs `.astro`
 
@@ -360,8 +360,9 @@ Remove all references to GraphQL queries, and instead use [`Astro.glob()`](/en/g
 
 These data requests are made in the frontmatter of the Astro component using the data.
 
-```astro title="src/pages/index.astro"
+```astro title="src/pages/index.astro" del={2,12-28}
 ---
+import { graphql } from "gatsby"
 import { getCollection } from 'astro:content';
 
 // Get all `src/content/blog/` entries
@@ -370,6 +371,24 @@ const allBlogPosts = await getCollection('blog');
 // Get all `src/pages/posts/` entries
 const allPosts = await Astro.glob('../pages/posts/*.md');
 ---
+
+export const pageQuery = graphql`
+  {
+    allMarkdownRemark(sort: { frontmatter: { date: DESC } }) {
+      nodes {
+        excerpt
+        fields {
+          slug
+        }
+        frontmatter {
+          date(formatString: "MMMM DD, YYYY")
+          title
+          description
+        }
+      }
+    }
+  }
+`
 ```
 
 ## Guided example: Gatsby layout to Astro
