Add missing FileTree import

--- a/src/pages/pt-br/reference/publish-to-npm.mdx
+++ b/src/pages/pt-br/reference/publish-to-npm.mdx
@@ -4,6 +4,8 @@ title: Publique no NPM
 description: Aprenda como publicar componentes Astro no NPM
 i18nReady: true
 ---
+import FileTree from '~/components/FileTree.astro';
+
 
 Está construindo um novo componente Astro? **Publique-o ao [npm!](https://npmjs.com/)**
 
@@ -41,7 +43,6 @@ Antes de se aprofundar, será útil ter um entendimento básico de:
 
 Para criar um pacote nós fortemente recomendados configurar seu ambiente de desenvolvimento para utilizar **workspaces** em um projeto. Isso irá permitir que você desenvolva o seu componente ao lado de uma cópia funcional do Astro.
 
-```
 <FileTree>
 - diretorio-do-meu-novo-componente/
   - demo/
