Correct component name

--- a/src/pages/pt-br/core-concepts/sharing-state.mdx
+++ b/src/pages/pt-br/core-concepts/sharing-state.mdx
@@ -3,10 +3,9 @@ layout: ~/layouts/MainLayout.astro
 title: Compartilhamento de Estado
 i18nReady: true
 ---
-import JavascriptFlavorTabs from '~/components/tabs/JavascriptFlavorTabs.astro'
-import UIFrameworkTabs from '~/components/tabs/UIFrameworkTabs.astro'
-import LoopingVideo from '~/components/LoopingVideo.astro'
-
+import UIFrameworkTabs from '~/components/tabs/UIFrameworkTabs.astro';
+import LoopingVideo from '~/components/LoopingVideo.astro';
+import JavascriptFlavorTabs from '~/components/tabs/JavascriptFlavorTabs.astro';
 
 
 Ao construir um website Astro com a [arquitetura em ilhas / hidratação parcial](/pt-br/concepts/islands/), você pode ter esse problema: **Eu quero compartilhar estado entre meus componentes.**
@@ -317,7 +316,7 @@ Agora, vamos rastrear os itens dentro de seu carrinho. Para evitar duplicações
 Vamos adicionar uma store `itensCarrinho` a nossa `storeCarrinho.js` de anteriormente. Você também pode trocar para um arquivo TypeScript para definir a forma se quiser.
 
 
-<JavaScriptFlavorTabs>
+<JavascriptFlavorTabs>
   <Fragment slot="js">
   ```js
   // src/storeCarrinho.js
@@ -355,13 +354,13 @@ Vamos adicionar uma store `itensCarrinho` a nossa `storeCarrinho.js` de anterior
   export const itensCarrinho = map<Record<string, ItemCarrinho>>({});
   ```
   </Fragment>
-</JavaScriptFlavorTabs>
+</JavascriptFlavorTabs>
 
 Agora, vamos exportar um helper `adicionarItemCarrinho` para nossos componentes utilizarem.
 - **Se o item não existe em seu carrinho**, adicione o item com uma quantidade inicial de 1.
 - **Se o item _já_ existe**, aumente a quantidade em 1.
 
-<JavaScriptFlavorTabs>
+<JavascriptFlavorTabs>
   <Fragment slot="js">
   ```js
   // src/storeCarrinho.js
@@ -403,7 +402,7 @@ Agora, vamos exportar um helper `adicionarItemCarrinho` para nossos componentes 
   }
   ```
   </Fragment>
-</JavaScriptFlavorTabs>
+</JavascriptFlavorTabs>
 
 :::note
 <details>
