more explicit diffs in reference examples

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -231,7 +231,7 @@ In Astro, your layout must include a full page shell (`<html>`, `<head>` and `<b
 
 You can use the following code to provide these extra elements around an existing Gatsby layout file, or write your own:
 
-```astro title="src/layouts/Layout.astro"
+```astro title="src/layouts/Layout.astro" "slot"
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -277,6 +277,11 @@ The following are some examples of Gatsby-specific syntax that you will need to 
 
 Convert any Gatsby `<Link to="">`, `<NavLink>` etc. components to HTML `<a href="">` tags. 
 
+```astro del={1} ins={2}
+<Link to="/blog">Blog</Link>
+<a href="/blog">Blog</a>
+```
+
 Astro does not use any special component for links, although you are welcome to build custom link components. You can then import and use this `<Link>` just as you would any other component.
 
 ```astro title="src/components/Link.astro"
@@ -292,9 +297,9 @@ If necessary, update any file imports to reference relative file paths exactly. 
 
 Note that `.astro` and several other file types must be imported with their full file extension.
 
-```astro title="src/pages/authors/Fred.astro"
+```astro title="src/pages/authors/Fred.astro" ".astro"
 ---
-import Card from `../../components/Card.astro`
+import Card from `../../components/Card.astro`;
 ---
 <Card />
 ```
@@ -303,16 +308,28 @@ import Card from `../../components/Card.astro`
 
 Convert any instances of `{children}` to an Astro `<slot />`. Astro does not need to receive `{children}` as a function prop and will automatically render child content in a `<slot />`.
 
+```astro title="src/components/MyComponent" del={1-7} ins={9}
+export default function MyComponent(props) { 
+    return (
+      <div>
+        {props.children}
+      </div>
+    );  
+}
+
+<slot />
+```
+
 React components that pass multiple sets of children can be migrated to an Astro component using [named slots](/en/core-concepts/astro-components/#named-slots):
 
 ```astro title="src/components/PageHeader.astro"
 <header>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <slot name="navItems"/>
-        </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <slot name="navItems"/>
+    </ul>
+  </nav>
 	<slot/>
 </header>
 ```
@@ -323,12 +340,8 @@ See more about [specific `<slot />` usage in Astro](/en/core-concepts/astro-comp
 
 Convert any inline style objects (`style = {{fontWeight: "bold", }}`) to inline HTML style attributes (`style="font-weight:bold;"`). Or, use an Astro `<style>` tag for scoped CSS styles.
 
-```jsx title="src/components/Card.jsx"
+```astro title="src/components/Card.astro" del={1} ins={2}
 <div style={{backgroundColor: `#f4f4f4`, padding: `1em`}}>{message}</div>
-```
-
-
-```astro title="src/components/Card.astro"
 <div style="background-color: #f4f4f4; padding: 1em;">{message}</div>
 ```
 
@@ -457,7 +470,7 @@ This example converts the main project layout (`layout.js`) from Gatsby's blog s
 
 3. add a page shell so that your layout provides each page with the necessary parts of an HTML document:
 
-  ```astro title="src/layouts/Layout.astro" ins={3-10,20-21}
+  ```astro title="src/layouts/Layout.astro" ins={3-10,22-23}
   ---
   ---
   <html>
@@ -470,7 +483,9 @@ This example converts the main project layout (`layout.js`) from Gatsby's blog s
     <body>
       <div class="global-wrapper" data-is-root-path={isRootPath}>
         <header class="global-header">{header}</header>
-        <main><slot /></main>
+        <main>
+          <slot />
+        </main>
         <footer>
           &#169; {new Date().getFullYear()}, Built with
           {` `}
@@ -492,7 +507,7 @@ This example converts the main project layout (`layout.js`) from Gatsby's blog s
   - Use `class` instead of `className`. 
   - Import a local stylesheet from your project for the class names to take effect.
 
-  ```astro title="src/layouts/Layout.astro" ins={2-3, 15, 16, 20, 24} "class" "<a" "</a>" "<slot />"
+  ```astro title="src/layouts/Layout.astro" ins={2-3, 15, 16, 20, 24} "class" "<a" "</a>"
   ---
   import '../styles/style.css';
   const { title, pathname } = Astro.props
